fixed up alignment for responsive screens

--- a/src/Components/ProjectDisplayCard/ProjectDisplayCard.scss
+++ b/src/Components/ProjectDisplayCard/ProjectDisplayCard.scss
@@ -2,6 +2,7 @@
   height: 421px;
   width: 323px;
   background-color: #3A3503;
+  margin-bottom: 24px;
 
   .display-card-picture-container {
     display: flex;
